--- a/src/components/DefaultMenu.astro
+++ b/src/components/DefaultMenu.astro
@@ -107,7 +107,7 @@ const menus = [
         },
         {
             ico: "📦",
-            link: "https://n4n5.dev/lab/packages",
+            link: "https://n4n5.dev/packages",
             title: "Packages",
             subtitle: null,
         },
