--- a/src/pages/[...page].astro
+++ b/src/pages/[...page].astro
@@ -43,7 +43,7 @@ const removeAccents = (str: string) => str.normalize("NFD").replace(/[\u0300-\u0
                     href={site}
                     target="_blank"
                     title="main website"
-                    aria-label="webpage title is hidding a link to main website">{g()}</a
+                    aria-label="webpage title is hiding a link to main website">{g()}</a
                 >
                 <span class="link-title">{g()}</span>
                 <a
@@ -51,7 +51,7 @@ const removeAccents = (str: string) => str.normalize("NFD").replace(/[\u0300-\u0
                     href={rss}
                     target="_blank"
                     title="rss feed"
-                    aria-label="webpage title is hidding a link to rss feed">{g() + g()}</a
+                    aria-label="webpage title is hiding a link to rss feed">{g() + g()}</a
                 >
                 <span class="link-title">{g() + g() + g()}</span>
                 <a
@@ -59,7 +59,7 @@ const removeAccents = (str: string) => str.normalize("NFD").replace(/[\u0300-\u0
                     href={repo}
                     target="_blank"
                     title="github repo"
-                    aria-label="webpage title is hidding a link to github repo">{g()}</a
+                    aria-label="webpage title is hiding a link to github repo">{g()}</a
                 >
             </h1>
             <div>
