add massy bus station

--- a/src/components/MapPoints.astro
+++ b/src/components/MapPoints.astro
@@ -5,7 +5,7 @@ interface Props {
     points: PointsType;
     height?: number;
     zoom?: number;
-    view?: [number, number];
+    view: [number, number];
 }
 
 const franceView = [46.446, 2.903];
