--- a/src/pages/map.astro
+++ b/src/pages/map.astro
@@ -37,7 +37,7 @@ for (const oneFile of json) {
 ---
 
 <Layout title="map">
-    <MapPoints points={points} />
+    <MapPoints points={points} view={[45, 4]} />
     <style type="text/css">
         ::global(#map) {
             height: 100vh;
