--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -7,7 +7,6 @@ import Layout from "../layouts/Layout.astro";
         setTimeout(() => {
             window.location.href = "/";
         }, 3000);
-        window.location.href = "/";
     </script>
-    <p>Not found: redirecting you</p>
+    <p>Not found: redirecting you in 3s</p>
 </Layout>
