--- a/src/components/OneLineThought.astro
+++ b/src/components/OneLineThought.astro
@@ -5,11 +5,13 @@ import Time from "./Time.astro";
 
 interface Props {
     post: CollectionEntry<"post">;
+    absSlug?: boolean;
 }
 
-const { post: p } = Astro.props;
+const { post: p, absSlug = false } = Astro.props;
 // const article = await p.render();
 const slug = p.data.customSlug || p.slug;
+const href = absSlug ? `/${slug}` : slug;
 
 const removeAccents = (str: string) => str.normalize("NFD").replace(/[\u0300-\u036f]/g, "");
 ---
@@ -26,7 +28,7 @@ const removeAccents = (str: string) => str.normalize("NFD").replace(/[\u0300-\u0
         },
     ]}
 >
-    <a href={slug} class="article-link">
+    <a href={href} class="article-link">
         <div class="link-wrap">
             <span class="date">
                 <Time date={p.data.publishDate} />
