--- a/src/components/OneLineThought.astro
+++ b/src/components/OneLineThought.astro
@@ -11,7 +11,7 @@ interface Props {
 const { post: p, absSlug = false } = Astro.props;
 // const article = await p.render();
 const slug = p.data.customSlug || p.slug;
-const href = absSlug ? `/${slug}` : slug;
+const href = absSlug ? `/${slug}/` : `${slug}/`;
 
 const removeAccents = (str: string) => str.normalize("NFD").replace(/[\u0300-\u036f]/g, "");
 ---
