--- a/src/components/Thought.astro
+++ b/src/components/Thought.astro
@@ -1,15 +1,12 @@
 ---
 import { Image } from "astro:assets";
+
+import Logo from "../../public/images/n4n5.png";
 ---
 
 <div class="flexed">
     <div class="logo">
-        <Image
-            src="https://raw.githubusercontent.com/Its-Just-Nans/Its-Just-Nans/refs/heads/main/n4n5.png"
-            alt="n4n5 logo"
-            width="100"
-            height="100"
-        />
+        <Image src={Logo} alt="n4n5 logo" width="100" height="100" />
     </div>
     <div class="bubble">
         <slot />
