--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,6 +15,7 @@ const { title, description = "thoughts" } = Astro.props;
         <meta name="viewport" content="width=device-width" />
         <meta name="generator" content={Astro.generator} />
         <link rel="sitemap" href="/sitemap-index.xml" />
+        <link rel="prefetch" href="/images/n4n5.png" />
         <title>{title}</title>
     </head>
     <body>
@@ -44,7 +45,7 @@ const { title, description = "thoughts" } = Astro.props;
     body::-webkit-scrollbar-thumb {
         background: #888;
     }
-    body    ::-webkit-scrollbar-thumb:hover {
+    body ::-webkit-scrollbar-thumb:hover {
         background: #555;
     }
 </style>
