--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -3,10 +3,35 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="404">
+    <div class="container">
+        <div>
+            <p>404 Page Not found</p>
+            <p>
+                Redirecting to <span class="redirection">/</span> in <span class="countdown">3</span>s
+            </p>
+        </div>
+    </div>
     <script>
+        let countdown = 3;
+        const redirect = document.querySelector(".redirection")!;
+        const count = document.querySelector(".countdown")!;
+        redirect.innerHTML = window.location.origin;
+        setInterval(() => {
+            countdown -= 1;
+            count.innerHTML = countdown.toString();
+        }, 1000);
         setTimeout(() => {
             window.location.href = "/";
         }, 3000);
     </script>
-    <p>Not found: redirecting you in 3s</p>
 </Layout>
+
+<style>
+    .container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        text-align: center;
+    }
+</style>
