--- a/src/components/DefaultMenu.astro
+++ b/src/components/DefaultMenu.astro
@@ -1,6 +1,6 @@
 ---
-import { domain, website } from "../utils/constants";
-import { isSchoolIco, isWorkIco, isThoughtIco, isEventIco } from "../utils/constants";
+import { domain, website } from "@utils/constants";
+import { isSchoolIco, isWorkIco, isThoughtIco, isEventIco } from "@utils/constants";
 import GithubIcon from "./GithubIcon.astro";
 const menus = [
     [
