--- a/src/components/Emoji.astro
+++ b/src/components/Emoji.astro
@@ -1,6 +1,6 @@
 ---
 import type { InferEntrySchema } from "astro:content";
-import { isSchoolIco, isWorkIco, isThoughtIco, isEventIco } from "../utils/constants";
+import { isSchoolIco, isWorkIco, isThoughtIco, isEventIco } from "@utils/constants";
 
 interface Props {
     data: InferEntrySchema<"post">;
