--- a/src/components/OneLineThought.astro
+++ b/src/components/OneLineThought.astro
@@ -2,7 +2,7 @@
 import type { CollectionEntry } from "astro:content";
 import Emoji from "./Emoji.astro";
 import Time from "./Time.astro";
-import { getEntrySlug } from "../utils/posts";
+import { getEntrySlug } from "@utils/posts";
 
 interface Props {
     post: CollectionEntry<"post">;
