--- a/src/components/Thought.astro
+++ b/src/components/Thought.astro
@@ -1,7 +1,7 @@
 ---
 import { Image } from "astro:assets";
 
-import Logo from "../../public/images/n4n5.png";
+import Logo from "@public/images/n4n5.png";
 ---
 
 <div class="flexed">
