--- a/src/components/Title.astro
+++ b/src/components/Title.astro
@@ -1,5 +1,5 @@
 ---
-import { project, website, repo } from "../utils/constants";
+import { project, website, repo } from "@utils/constants";
 const rss = `/rss.xml`;
 
 let idx = 0;
