--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -1,9 +1,9 @@
 ---
-import Layout from "../../layouts/Layout.astro";
-import CentralBody from "../../components/CentralBody.astro";
-import { filterHidden, getAllPosts, getAllTags, sortMDByDate } from "../../utils/posts";
-import TitleDiv from "../../components/TitleDiv.astro";
-import AllTags from "../../components/AllTags.astro";
+import Layout from "@layouts/Layout.astro";
+import CentralBody from "@components/CentralBody.astro";
+import { filterHidden, getAllPosts, getAllTags, sortMDByDate } from "@utils/posts";
+import TitleDiv from "@components/TitleDiv.astro";
+import AllTags from "@components/AllTags.astro";
 
 const data = sortMDByDate(filterHidden(await getAllPosts()));
 const tags = getAllTags(data);
